wacc_examples/invalid_TEST/semanticErr/arrays/arrayElemAccessMissing_US.wacc
# array lhs assign identifier missing

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  println a[1]
end
